# Experiment-Distributed-Deep-Learning

./: .gitignore  CMakeLists.txt  test_shell.sh
src/cpp/: Global.cc  Global.h  c_api.cc  c_api.h  def.h
src/cpp/common/: CommonTensor.cc  CommonTensor.h  OpContext.cc  OpContext.h
src/cpp/common/tensorflow/: TensorflowOpContext.cc  TensorflowOpContext.h  TensorflowTensor.cc  TensorflowTensor.h
src/cpp/communicate/: TensorCommunicateRequest.cc  TensorCommunicateRequest.h
src/cpp/communicate/backend/: CommunicationBackend.cc  CommunicationBackend.h  Communicator.cc  Communicator.h
src/cpp/communicate/backend/mpi/: MPIBackend.cc  MPIBackend.h  MPICommunicator.cc  MPICommunicator.h
src/cpp/communicate/collective/: TensorCollectiveCommunicateRequest.cc  TensorCollectiveCommunicateRequest.h
src/cpp/communicate/collective/allreduce/: TensorAllreduceRequest.cc  TensorAllreduceRequest.h
src/cpp/communicate/collective/broadcast/: TensorBroadcastRequest.cc  TensorBroadcastRequest.h
src/cpp/communicate/collective/controller/: TensorsCollectiveCommunicateController.cc  TensorsCollectiveCommunicateController.h
src/cpp/communicate/collective/controller/rtc/: RingTokenCommunicateController.cc  RingTokenCommunicateController.h  RingTokenCommunication.cc  RingTokenCommunication.h  Token.cc  Token.h
src/cpp/communicate/communication/: Communication.h  CommunicationBackend.cc  CommunicationBackend.h  MPICommunication.cc  MPICommunication.h
src/cpp/communicate/communication/mpi/: MPIBackend.cc  MPIBackend.h
src/cpp/communicate/end2end/: TensorEnd2EndCommunicateRequest.cc  TensorEnd2EndCommunicateRequest.h
src/cpp/communicate/end2end/controller/: TensorEnd2EndCommunicateController.cc  TensorEnd2EndCommunicateController.h
src/cpp/communicate/end2end/controller/bcc/: BlockedEnd2EndCommunicateController.cc  BlockedEnd2EndCommunicateController.h  BlockedEnd2EndCommunication.cc  BlockedEnd2EndCommunication.h
src/cpp/communicate/end2end/controller/smcc/: Message.cc  Message.h  SimpleMessageEnd2EndCommunicateController.cc  SimpleMessageEnd2EndCommunicateController.h  SimpleMessageEnd2EndCommunication.cc  SimpleMessageEnd2EndCommunication.h
src/cpp/communicate/message/: Message.cc  Message.h  MessageController.cc  MessageController.h  message.h
src/cpp/communicate/message/mpi/: MPIMessageController.cc  MPIMessageController.h
src/cpp/communicate/tensor/: TensorCollectiveCommunicateRequest.cc  TensorCollectiveCommunicateRequest.h  TensorCommunicateRequest.cc  TensorCommunicateRequest.h
src/cpp/communicate/tensor/allreduce/: TensorAllreduceRequest.cc  TensorAllreduceRequest.h  TensorsAllreduceController.cc  TensorsAllreduceController.h
src/cpp/communicate/tensor/allreduce/rta/: MPIRingTokenAllreduceCommunication.cc  MPIRingTokenAllreduceCommunication.h  MPIRingTokenAllreduceController.cc  MPIRingTokenAllreduceController.h  RingTokenAllreduceCommunication.cc  RingTokenAllreduceCommunication.h  RingTokenAllreduceController.cc  RingTokenAllreduceController.h  Token.cc  Token.h
src/cpp/communicate/tensor/collective/: TensorCollectiveCommunicateRequest.cc  TensorCollectiveCommunicateRequest.h
src/cpp/communicate/tensor/collective/allreduce/: TensorAllreduceRequest.cc  TensorAllreduceRequest.h
src/cpp/communicate/tensor/collective/broadcast/: TensorBroadcastRequest.cc  TensorBroadcastRequest.h
src/cpp/communicate/tensor/collective/controller/: TensorsCollectiveCommunicateController.cc  TensorsCollectiveCommunicateController.h
src/cpp/communicate/tensor/collective/request/: TensorAllgatherRequest.cc  TensorAllgatherRequest.h  TensorAllreduceRequest.cc  TensorAllreduceRequest.h  TensorBroadcastRequest.cc  TensorBroadcastRequest.h  TensorCollectiveCommunicateRequest.cc  TensorCollectiveCommunicateRequest.h
src/cpp/communicate/tensor/end2end/: TensorEnd2EndCommunicateRequest.cc  TensorEnd2EndCommunicateRequest.h
src/cpp/communicate/tensor/end2end/controller/: TensorEnd2EndCommunicateController.cc  TensorEnd2EndCommunicateController.h
src/cpp/communicate/tensor/end2end/receive/: TensorReceiveCommunicateRequest.cc  TensorReceiveCommunicateRequest.h
src/cpp/communicate/tensor/end2end/request/: TensorEnd2EndCommunicateRequest.cc  TensorEnd2EndCommunicateRequest.h  TensorReceiveCommunicateRequest.cc  TensorReceiveCommunicateRequest.h  TensorSendCommunicateRequest.cc  (+1 more)
src/cpp/global/: Global.cc  Global.h  GlobalLog.cc  GlobalLog.h  GlobalLogStream.cc  GlobalLogStream.h  HeapMemoryManager.cc  HeapMemoryManager.h  LogConfig.h  MPIGlobal.cc  MPIGlobal.h  initialize.cc  initialize.h
src/cpp/op/: AllreduceOp.cc  AllreduceOp.h  BroadcastOp.cc  BroadcastOp.h  EndToEndOp.cc  EndToEndOp.h  ForwardAndSendOp.cc  ForwardAndSendOp.h  ReceiveTensorOp.cc  ReceiveTensorOp.h  SendTensorOp.cc  SendTensorOp.h
src/cpp/op/tensorflow/: AllgatherOp.cc  AllgatherOp.h  AllreduceOp.cc  AllreduceOp.h  AsyncOpKernelWithKey.cc  AsyncOpKernelWithKey.h  BroadcastOp.cc  BroadcastOp.h  DoButPassByOp.cc  DoButPassByOp.h  ForwardAndSendOp.cc  ForwardAndSendOp.h  OpKernelWithKey.cc  OpKernelWithKey.h  PassWithComputed.cc  PassWithComputed.h  ReceiveTensorOp.cc  ReceiveTensorOp.h  SendTensorOp.cc  SendTensorOp.h  TimeLogOp.cc  TimeLogOp.h
src/py/: temp.py
src/py/ddl/: log.py  message.py
src/py/ddl/data/: __init__.py  data.py
src/py/ddl/examples/: branched_pipeline.py  data_and_pipeline_2.py  data_and_pipeline_3.py  data_parallelism.py  keras_pipeline.py  keras_pipeline_baseline.py  pipeline_common.py  pipeline_network_like_stages.py  pipeline_sequential_2stages.py  pipeline_sequential_3stages.py  pipeline_sequential_baseline.py  tf2_keras.py
src/py/ddl/examples/keras_pipeline_mpi/: main.py  rank0.py  rank1.py
src/py/ddl/tensorflow/: __init__.py  communicate.py  communicator.py  cpp_backend.py  data_dispatcher.py  global_class.py  message.py  tensor_communicate.py  util.py
src/py/ddl/tensorflow/keras/: __init__.py  data_parallelism_distributed_optimizer.py  pipeline_distributed_optimizer.py
src/py/ddl/test/: allgather_test.py  allreduce_test.py  broadcast_test.py
(+45 files in other folders)
